Add Jen's destinations

--- a/css/app.css
+++ b/css/app.css
@@ -58,3 +58,15 @@ h2 {
 #barcelona {
     background-color: #800000;
 }
+
+#florida {
+    background-color: #ec8d0f;
+}
+
+#paris {
+    background-color: #ec0f59;
+}
+
+#scotland {
+    background-color: #0fec1a;
+}
